apps/keycloak/overlays/ops/virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: keycloak
  namespace: keycloak
  annotations:
    link.argocd.argoproj.io/external-link: https://keycloak.devxp-tech.io
spec:
  hosts:
    - "keycloak.devxp-tech.io"
  gateways:
    - istio-system/istio-ingressgateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 80
            host: keycloak.keycloak.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: keycloak-admin
  namespace: keycloak
  annotations:
    link.argocd.argoproj.io/external-link: https://keycloak-admin.devxp-tech.io
spec:
  hosts:
    - "keycloak-admin.devxp-tech.io"
  gateways:
    - istio-system/istio-ingressgateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 80
            host: keycloak.keycloak.svc.cluster.local
